k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    # Will this still work if I change the name here?
    component: client
spec:
  replicas: 3
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        # Will this still work if I change the name here?
        - name: client
          image: chaheein123/udemykubes-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000








# image: chaheein123/udemykubes-client:latest
