k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"  # You have this, but modern K8s wants the line below too!
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # <--- CRITICAL FIX: Add this exact line right here!
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix  # Make sure this is present in v1
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
